[tool.poetry]
name = "rdfdig"
version = "0.1.0"
description = "A command line tool for creating diagrams from RDF data."
authors = ["Lawon Lewis <lawson@kurrawong.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.0.0"
jinja2 = "^3.1.4"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
rdfdig = "rdfdig.__main__:main"
